--- a/Project/Home/home.css
+++ b/Project/Home/home.css
@@ -1,6 +1,20 @@
+/* body 스타일 */
+body {
+  margin: 0;
+  display: flex;
+  background-color: #121212;
+  color: white;
+  font-family: sans-serif;
+}
+
 /*상단바*/
 .topbar {
-  display: flex;                       /*가로 정렬*/
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;                       /* 사이드바 보다 높게 */
+  display: flex;                       /* 가로 정렬 */
   justify-content: space-between;      /* 좌/우 정렬 */
   align-items: center;                 /* 세로 중앙 정렬 */
   padding: 8px 16px;
@@ -8,6 +22,7 @@
   background-color: white;
   border-bottom: 1px solid #ddd;
   background-color: black;
+  border-bottom: none;
 }
 
 .left, .center, .right {
@@ -27,19 +42,29 @@
 
 /*상단바(left) 스타일*/
 /*햄버거바*/
-.fa-bars {
-  width: 40px;
-  height: 40px;
-  font-size: 20px;
+.menu-btn {
+  width: 36px;
+  height: 36px;
   color: white;
   background-color: black;
+  border: none;
   border-radius: 50%;
-  border: 2px solid #383838;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  padding: 0;
 }
+.menu-btn:hover {
+  background-color: #333;
+  border-color: #555;
+}
+
 /*로고 이미지*/
 .logo-img {
   width: 140px;
   height: auto;
+  cursor: pointer;
 }
 
 
@@ -70,30 +95,103 @@
   border-radius: 0 20px 20px 0;     /*오른쪽만 둥글게*/
   background-color: #383838;
   cursor: pointer;
-
 }
 .voice-btn {
   margin-left: 5px;
   color: white;
   background-color: #383838;
-  border: 1px solid #383838;
+  border: none;
   border-radius: 50%;
   width: 36px;
   height: 36px;
-
+}
+.voice-btn:hover {
+  background-color: #555;
+  border-color: #666;
 }
 
-
-
-
-
-
-
-
 /*상단바(right) 스타일*/
+.right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.make-btn {
+  color: white;
+  background-color: #383838;
+  border: none;
+  border-radius: 20px 20px 20px 20px;
+  width: 90px;
+  height: 36px;
+}
+.make-btn:hover {
+  background-color: #555;
+  border-color: #666;
+}
+.bell-btn  {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: black;
+  font-size: 24px;
+  border: none;
+  border-radius: 50%;
+  height:36px;
+  width: 36px;
+}
+.bell-btn:hover {
+  background-color: #222;
+  border-color: #555;
+}
+
 /*프로필 이미지*/
 #profileimg {
   width: 32px;
   height: 32px;
   border-radius: 50%;
+}
+
+/*사이드 바*/
+.sidebar {
+  position: fixed;
+  top: 56px;              /* 상단바 높이만큼 내리기 */
+  left: 0;
+  z-index: 500;           /* 상단바보다 낮게 */
+  width: 240px;
+  height: calc(100vh - 56px);
+  background-color: #181818;
+  padding: 0px 10px;
+}
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+  margin-top: 5px;
+}
+.sidebar li {
+  margin:  0;
+}
+.sidebar a {
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+}
+/*사이드바 버튼*/
+.sidebar button {
+  width: 100%;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 16px;
+  text-align: left;
+  padding: 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.sidebar button:hover {
+  background-color: #333;
+  border-radius: 8px;
 }
