--- a/Project/Home/home.css
+++ b/Project/Home/home.css
@@ -9,7 +9,7 @@ body {
 
 /*----------상단바----------*/
 .topbar {
-  position: fixed;
+  position: fixed;                    /* 상단바 고정 */
   top: 0;
   left: 0;
   right: 0;
@@ -59,7 +59,6 @@ body {
 }
 .menu-btn:hover {
   background-color: #333;
-  border-color: #555;
 }
 
 /*로고 이미지*/
@@ -78,7 +77,7 @@ body {
   width: 500px;
   height: 36px;
   padding: 0 10px;
-  border: 1px solid #383838;
+  border: 1px solid #2f2f2f;
   border-right: none;               /*버튼과 겹치는 부분 제거*/
   border-radius: 20px 0 0 20px;     /*왼쪽만 둥글게*/
   background-color: black;
@@ -91,16 +90,16 @@ body {
   color: white;
   height: 36px;
   width: 60px;
-  border: 1px solid #383838;
+  border: 1px solid #2f2f2f;
   border-left: none;                /*입력창과 겹치는 부분 제거*/
   border-radius: 0 20px 20px 0;     /*오른쪽만 둥글게*/
-  background-color: #383838;
+  background-color: #2f2f2f;
   cursor: pointer;
 }
 .voice-btn {
   margin-left: 5px;
   color: white;
-  background-color: #383838;
+  background-color: #2f2f2f;
   border: none;
   border-radius: 50%;
   width: 36px;
@@ -108,7 +107,6 @@ body {
 }
 .voice-btn:hover {
   background-color: #555;
-  border-color: #666;
 }
 
 /*상단바(right) 스타일*/
@@ -119,7 +117,7 @@ body {
 }
 .make-btn {
   color: white;
-  background-color: #383838;
+  background-color: #2f2f2f;
   border: none;
   border-radius: 20px 20px 20px 20px;
   width: 90px;
@@ -127,7 +125,6 @@ body {
 }
 .make-btn:hover {
   background-color: #555;
-  border-color: #666;
 }
 .bell-btn  {
   display: flex;
@@ -143,27 +140,93 @@ body {
 }
 .bell-btn:hover {
   background-color: #222;
-  border-color: #555;
 }
 /*프로필 이미지*/
-#profileimg {
+.profileimg {
   width: 32px;
   height: 32px;
   border-radius: 50%;
+  object-fit: cover;
+}
+/*-------------프로필 드롭바-------------*/
+.profile-wrapper {
+  position: relative;
+  display: inline-block;
+}
+.dropdown {
+  position: absolute;
+  top: 100%;  /* 프로필 이미지 아래로*/
+  right: 0;
+  background-color: #2f2f2f;
+  border: 1px #ccc;
+  border-radius: 20px;
+  width: 300px;
+  display: none;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
+  z-index: 999;
+  max-height: 700px;
+  overflow-y: auto;
+}
+.dropdownProfile {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-top: 15px;
+  margin-left: 10px;
+}
+.dropdown ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.dropdown ul li a {
+  display: block;
+  padding: 10px;
+  color: white;
+  text-decoration: none;
+}
+.dropdown a {
+  margin-left: 5px;
+}
+.dropdown i {
+  margin-right: 20px;
+}
+.dropdown ul li a:hover {
+  background-color: #555;
+  border-radius: 8px;
+}
+/*드롭박스 스크롤*/
+.dropdown{
+  overflow-y: auto;
+}
+/* Webkit 기반 브라우저 (Chrome, Edge, Safari 등)용 스크롤바 스타일 */
+.dropdown::-webkit-scrollbar {
+  width: 4px; /* 스크롤바 굵기 */
 }
 
+.dropdown::-webkit-scrollbar-thumb {
+  background-color: #666; /* 손잡이 색상 */
+  border-radius: 4px;      /* 둥근 모서리 */
+}
 
+.dropdown::-webkit-scrollbar-thumb:hover {
+  background-color: #888; /* 호버 시 색상 */
+}
+
+.dropdown::-webkit-scrollbar-track {
+  background-color: #1a1a1a; /* 배경 트랙 색상 */
+}
 
 /*----------사이드 바----------*/
 .sidebar {
-  position: fixed;
+  position: fixed;        /* 사이드바 고정 */
   top: 56px;              /* 상단바 높이만큼 내리기 */
   left: 0;
   z-index: 500;           /* 상단바보다 낮게 */
   width: 240px;
   height: 100vh;
   background-color: black;
-  padding: 0px 10px;
+  padding: 0 10px;
   overflow-y: auto;        /* 스크롤 */
 }
 .sidebar ul {
@@ -205,10 +268,10 @@ body {
 
 /*----------사이드바v2----------*/
 .sidebar2 {
-  display: none;
+  display: none;                /* 첫 로딩화면에서 안보이게 */
   top: 56px;
   left: 0;
-  position: fixed;
+  position: fixed;              /* 사이드바v2 고정 */
   width: 80px;
   height: 100vh;
   background-color: black;
@@ -277,12 +340,58 @@ body {
   background-color: #1a1a1a; /* 배경 트랙 색상 */
 }
 
-/*메인 콘텐츠*/
+/*------------------- 메인 콘텐츠 -------------------*/
 main {
+  display: flex;
+  flex-wrap: wrap;              /* 한줄 다 차면 다음 줄로 */
+  gap: 20px;
   margin-top: 56px;
   margin-left: 240px;
   padding: 16px;
   color: white;
-  background-color: #121212;
+  background-color: black;
   min-height: calc(100vh - 56px);
+  width: calc(100% - 240px);    /* main 크기 확장 */
+}
+
+.content {
+  width: 360px;
+  margin: 10px;
+  font-family: Arial, sans-serif;
+  cursor: pointer;
+}
+
+/* 썸네일 카드 */
+.thumbnail {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+.video-meta {
+  display: flex;
+  margin-top: 10px;
+}
+.video-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 15px;
+}
+.video-title {
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  margin: 0;
+}
+.video-producer,
+.video-update {
+  font-size: 14px;
+  color: #aaa;
+  margin: 2px 0 0 0;
+}
+.producer-img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
 }
