--- a/Project/Home/home.css
+++ b/Project/Home/home.css
@@ -260,6 +260,11 @@ body {
   background-color: #333;
   border-radius: 8px;
 }
+.sidebar img {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
 .stream {
   width: 30px;
   height: auto;
