--- a/Project/Video/css/video.css
+++ b/Project/Video/css/video.css
@@ -1,8 +1,10 @@
 /*---------- body 스타일 ----------*/
 body {
   margin: 0;
+  margin-left: 25px;
+  margin-right: 15px;
   display: flex;
-  background-color: #121212;
+  background-color: black;
   color: white;
   font-family: sans-serif;
 }
@@ -332,3 +334,110 @@ body {
   background-color: #1a1a1a; /* 배경 트랙 색상 */
 }
 
+/*----------------------------------영상 content----------------------------------*/
+.content {
+  /*display: block;*/
+  margin-top: 80px;
+
+}
+.bi-letter {
+  font-size: 15px;
+  font-weight: bold;
+  margin: 0;
+}
+.li-letter {
+  font-size: 13px;
+  color: #aaaaaa;
+  margin: 0;
+}
+/*-------------------영상 제목, 유튜버 프로필, 버튼, 영상설명-------------------*/
+iframe {
+  border-radius: 10px;
+}
+
+.v-producer_content {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+
+}
+.v-producer_content button {
+  color: white;
+  background-color: #2f2f2f;
+  border: none;
+  height: 36px;
+  border-radius: 20px;
+  padding: 0 12px;
+  font-size: 15px;
+  margin-left: 5px;
+  cursor: pointer;
+  margin: 0;
+}
+#like:hover,
+#unlike:hover,
+.v-producer_content button:hover {
+  background-color: #555;
+}
+
+.vp-left {
+  display: flex;
+  flex-direction: column;
+  margin-right: 10px;
+}
+.vp-right {
+  display: flex;
+  gap: 5px;
+  margin-left: auto;
+}
+
+/*영상게시자 사진*/
+.i-video_profile {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+
+}
+
+.v-producer_content {
+  display: flex;
+}
+
+/*좋아요/싫어요 버튼*/
+.like-group {
+  display: flex;
+}
+#like, #unlike {
+  padding: 0 10px;
+  height: 36px;
+  background-color: #2f2f2f;
+  color: white;
+  border: none;
+  font-size: 15px;
+}
+#like {
+  border-radius: 20px 0 0 20px;
+  border-right: 1px solid #444;
+  width: 80px;
+  border-right: 0;
+}
+#unlike {
+  border-radius: 0 20px 20px 0;
+  border-left: 1px solid #444;
+  width: 50px;
+}
+
+/*영상 설명*/
+.content-exp {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding:  8px 12px;
+  background-color: #2f2f2f;
+  margin-top: 15px;
+}
+
+
+/*----------------------------------main-재생목록*----------------------------------- */
+.playlist {
+  margin-top: 80px;
+  width: 100%;
+}
