--- a/Project/Video/css/video.css
+++ b/Project/Video/css/video.css
@@ -377,6 +377,7 @@ iframe {
 #unlike:hover,
 .v-producer_content button:hover {
   background-color: #555;
+  border: none;
 }
 
 .vp-left {
@@ -430,11 +431,59 @@ iframe {
 .content-exp {
   border: 1px solid black;
   border-radius: 10px;
-  padding:  8px 12px;
+  font-size: 14px;
   background-color: #2f2f2f;
   margin-top: 15px;
+  padding:  8px 12px;
 }
 
+.content-exp p {
+  margin: 0;
+}
+.content-exp pre {
+  white-space: pre-wrap;    /*줄바꿈 유지*/
+  font-family: inherit;     /*고정폭 말고 일반 폰트로*/
+  font-size: 14px;
+}
+
+.comment {
+  margin-top: 20px;
+}
+.script-btn {
+  margin-top: 15px;
+  border: 1px solid #555555;
+  border-radius: 20px;
+  font-size: 13px;
+  color: dodgerblue;
+  background-color: #2f2f2f;
+  height: 30px;
+  width: 100px;
+}
+.script-btn:hover {
+  background-color: #152b44;
+  border: none;
+}
+.str-btn {
+  margin-top: 10px;
+  color: white;
+  background-color: #2f2f2f;
+  border: 1px solid #555555;
+  border-radius: 20px;
+  margin-left: 10px;
+  font-size: 13px;
+  padding: 3px 18px;
+}
+.str-btn:hover {
+  background-color: #555;
+}
+
+.briefly {
+  margin-top: 50px ;
+}
+.briefly a{
+  text-decoration: none;
+  color: white;
+}
 
 /*----------------------------------main-재생목록*----------------------------------- */
 .playlist {
