--- a/Project/Video/css/video.css
+++ b/Project/Video/css/video.css
@@ -7,7 +7,20 @@ body {
   background-color: black;
   color: white;
   font-family: sans-serif;
+  padding: 0;
 }
+.main-container {
+  display: flex;
+  width: 100%;
+  margin-top: 80px;
+}
+.content {
+  width: 70%;
+}
+.playlist {
+  width: 30%;
+}
+
 /*----------------------------------상단바----------------------------------*/
 .topbar {
   position: fixed;                    /* 상단바 고정 */
@@ -335,11 +348,7 @@ body {
 }
 
 /*----------------------------------영상 content----------------------------------*/
-.content {
-  /*display: block;*/
-  margin-top: 80px;
 
-}
 .bi-letter {
   font-size: 15px;
   font-weight: bold;
@@ -361,7 +370,7 @@ iframe {
   gap: 12px;
 
 }
-.v-producer_content button {
+.vpc-btn {
   color: white;
   background-color: #2f2f2f;
   border: none;
@@ -373,12 +382,12 @@ iframe {
   cursor: pointer;
   margin: 0;
 }
-#like:hover,
-#unlike:hover,
+
 .v-producer_content button:hover {
   background-color: #555;
   border: none;
 }
+
 
 .vp-left {
   display: flex;
@@ -407,7 +416,7 @@ iframe {
 .like-group {
   display: flex;
 }
-#like, #unlike {
+.like-btn, .unlike-btn {
   padding: 0 10px;
   height: 36px;
   background-color: #2f2f2f;
@@ -415,17 +424,27 @@ iframe {
   border: none;
   font-size: 15px;
 }
-#like {
+.like-btn {
   border-radius: 20px 0 0 20px;
   border-right: 1px solid #444;
   width: 80px;
   border-right: 0;
 }
-#unlike {
+.unlike-btn {
   border-radius: 0 20px 20px 0;
   border-left: 1px solid #444;
   width: 50px;
 }
+
+.like-btn:hover,
+.unlike-btn:hover,
+.like-btn.active,
+.unlike-btn.active {
+  background-color: #555;
+  border: none;
+}
+
+
 
 /*영상 설명*/
 .content-exp {
@@ -478,15 +497,32 @@ iframe {
 }
 
 .briefly {
-  margin-top: 50px ;
+  /*margin-top: 50px ;*/
+  text-align: right;
 }
 .briefly a{
   text-decoration: none;
   color: white;
 }
 
+#full-desc {
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+#full-desc.collapsed {
+  max-height: 60px; /* 처음 보일 높이 조정 (3~4줄 보이게) */
+}
+
+#full-desc.expanded {
+  max-height: 1000px; /* 충분히 크게 설정 */
+}
+
+
 /*----------------------------------main-재생목록*----------------------------------- */
 .playlist {
-  margin-top: 80px;
-  width: 100%;
+
+
 }
