--- a/Project/Video/css/video.css
+++ b/Project/Video/css/video.css
@@ -581,3 +581,27 @@ iframe {
 }
 
 /*----------------------------------main-재생목록*----------------------------------- */
+.thumb-list {
+  display: flex;
+  margin-bottom: 15px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+}
+.thumb-list:hover {
+  transform: scale(1.03);
+  box-shadow: 0 8px 20px rgba(255, 255, 255, 0.1);
+}
+
+.thumb-list img {
+  width: 50%;
+  height: auto;
+  margin-right: 10px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.thumb-list:hover img {
+  transform: scale(1.03);
+  box-shadow: 0 8px 20px rgba(255, 255, 255, 0.1);
+}
+.playlist a {
+  text-decoration: none;
+}
