--- a/Project/Video/css/video.css
+++ b/Project/Video/css/video.css
@@ -22,6 +22,23 @@ body {
   margin-left: 15px;
 }
 
+/*playlist 반응형 구현*/
+@media (max-width: 960px) {
+  .main-container {
+    flex-direction: column;
+  }
+
+  .content,
+  .playlist {
+    width: 100%;
+  }
+
+  .playlist {
+    margin-top: 20px;
+  }
+}
+
+
 /*----------------------------------상단바----------------------------------*/
 .topbar {
   position: fixed;                    /* 상단바 고정 */
