--- a/Project/Video/css/video.css
+++ b/Project/Video/css/video.css
@@ -371,6 +371,7 @@ body {
   font-size: 15px;
   font-weight: bold;
   margin: 0;
+  min-width: 75px;
 }
 .li-letter {
   font-size: 13px;
@@ -399,6 +400,7 @@ iframe {
   margin-left: 5px;
   cursor: pointer;
   margin: 0;
+  min-width: 70px;
 }
 
 .v-producer_content button:hover {
