--- a/Project/Home/css/home.css
+++ b/Project/Home/css/home.css
@@ -377,6 +377,7 @@ main a{
   min-width: 200px; /* 썸네일 깨지는거 방지 */
   position: relative;
   border-radius: 15px;
+  padding: 8px 8px;
 }
 .content:hover {
   transform: scale(1.03);
