--- a/Project/Video/css/video.css
+++ b/Project/Video/css/video.css
@@ -420,6 +420,11 @@ iframe {
   margin-left: auto;
 }
 
+#video-frame {
+  width: 100%;
+  aspect-ratio: 16/9;  /* 16:9로 고정*/
+}
+
 /*영상게시자 사진*/
 .i-video_profile {
   width: 38px;
