--- a/Project/Video/css/video.css
+++ b/Project/Video/css/video.css
@@ -401,6 +401,36 @@ iframe {
   cursor: pointer;
   margin: 0;
   min-width: 70px;
+  white-space: nowrap;
+}
+.vpc-btn-sub1 {
+  color: black;
+  background-color: 	#f5f5f5;
+  border: none;
+  height: 36px;
+  border-radius: 20px;
+  padding: 0 12px;
+  font-size: 15px;
+  margin-left: 5px;
+  cursor: pointer;
+  margin: 0;
+  min-width: 70px;
+  white-space: nowrap;
+}
+
+.vpc-btn-sub2 {
+  color: white;
+  background-color: #2f2f2f;
+  border: none;
+  height: 36px;
+  border-radius: 20px;
+  padding: 0 12px;
+  font-size: 15px;
+  margin-left: 5px;
+  cursor: pointer;
+  margin: 0;
+  min-width: 120px;
+  white-space: nowrap;
 }
 
 .v-producer_content button:hover {
@@ -430,6 +460,8 @@ iframe {
   width: 38px;
   height: 38px;
   border-radius: 50%;
+  margin-right: 10px;
+  align-items: center;
 
 }
 
@@ -561,13 +593,37 @@ iframe {
   margin-top: 20px;
   margin-bottom: 30px;
 }
+.comment-text-wrapper {
+  margin: 0;
+  padding: 0;
+}
+.comment-name {
+  margin-bottom: 0;
+  font-weight: bold;
+}
+.comment-display {
+  display: block;
+  max-width: 100%;           /* 부모 너비를 넘지 않도록 */
+  max-width: 100%;           /* 부모 너비를 넘지 않도록 */
+}
+.comment-like-btn button {
+  color: white;
+  background-color: black;
+  border-radius: 50%;
+  border: none;
+  margin-top: 10px;
+}
+.comment-like-btn button:hover {
+ background-color: #555555;
+}
 .comment-text {
-  margin-left: 10px;
+  margin-left: 0;
   background-color: black;
   color: white;
   border: none;
   border-bottom: 1px solid white;
-  width: 100%;
+  width: 90%;
+  align-items: center;
 }
 .comment-add {
   background-color: black;
@@ -575,7 +631,7 @@ iframe {
   border: none;
   font-size: 20px;
   border-radius: 20px;
-  margin-left: 10px;
+  margin-left: 5px;
 }
 .comment-add:hover {
   background-color: #555555;
